"Added additional NBA Stats"

--- a/Arrays.ipynb
+++ b/Arrays.ipynb
@@ -2,35 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "A = 10"
+    "l = [23245, 27, 546, 215, -1234]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23245, 27, 546, 215, -1234]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "B = 5"
+    "a = np.array(l)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([23245,    27,   546,   215, -1234])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Arithmetics"
+    "a"
    ]
   },
   {
@@ -41,36 +85,29 @@
    },
    "outputs": [],
    "source": [
-    "C = A + B"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "D = B / A"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
+    "b = np.array([12, 455, 63.3, True, 'abc'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1234"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Printing"
+    "l.pop()"
    ]
   },
   {
@@ -83,7 +120,7 @@
     {
      "data": {
       "text/plain": [
-       "15"
+       "4559.8000000000002"
       ]
      },
      "execution_count": 11,
@@ -92,7 +129,7 @@
     }
    ],
    "source": [
-    "C"
+    "a.mean()"
    ]
   },
   {
@@ -103,15 +140,18 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[23245, 546]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(C)"
+    "l[::2]"
    ]
   },
   {
@@ -122,26 +162,40 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([23245,    27,   546,   215, -1234])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(D)"
+    "a"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "546"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import math"
+    "a[2]"
    ]
   },
   {
@@ -154,7 +208,7 @@
     {
      "data": {
       "text/plain": [
-       "12.0"
+       "array([546, 215])"
       ]
      },
      "execution_count": 15,
@@ -163,29 +217,18 @@
     }
    ],
    "source": [
-    "math.sqrt(144)"
+    "a[2:4]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.1622776601683795"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "math.sqrt(A)"
+    "b = a[2:4]"
    ]
   },
   {
@@ -198,7 +241,7 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "546"
       ]
      },
      "execution_count": 17,
@@ -207,14 +250,7 @@
     }
    ],
    "source": [
-    "round(math.sqrt(A))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
+    "b[0]"
    ]
   },
   {
@@ -225,8 +261,7 @@
    },
    "outputs": [],
    "source": [
-    "greeting = \"Hello\"\n",
-    "name = \"Bob\""
+    "b[:] = 111"
    ]
   },
   {
@@ -235,9 +270,20 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([111, 111])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "message = greeting + \" \" + name\n"
+    "b"
    ]
   },
   {
@@ -248,15 +294,73 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Bob\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([23245,    27,   111,   111, -1234])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(message)"
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "c = a.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([23245,    27,   111,   111, -1234])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23245"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c[0]"
    ]
   },
   {
